--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "starter"
   ],
   "main": "src/index.js",
+  "homepage": "https://gotlibbb.github.io/UsersTable-React-Hooks/",
   "dependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -17,13 +18,16 @@
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "gh-pages": "^3.2.0",
     "typescript": "4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
